# mvmusic

./: .gitignore  CMakeLists.txt  Makefile  README.md  configure
src/: conf.cc  conf.hh  consume_path.cc  consume_path.hh  consumer.cc  consumer.hh  env.cc  env.hh  globals.cc  globals.hh  main.cc  mpd.cc  parse_args.cc  parse_args.hh  usage.cc  usage.hh
test/: test_consume_path.cc
